--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="Stylesheet" href="css/global.css">
     <!-- Meus Scripts para o Nano RPG -->
     <script src="js/InicializadorDeAtributos.js" defer></script>
-    <script src="js/atributos.js" defer></script>    
+    <script src="js/atributos.js" defer></script>
+    <script src="js/pericias.js" defer></script>
 
     <title>Ficha Nano RPG</title>
   </head>
@@ -219,7 +220,16 @@
         </div><!-- FIM ATRIBUTOS TERCIARIOS -->
 
     </div><!-- FIM DE ATRIBUTOS -->
-    
+    <div class="container" id="pericias"><!-- inicio de pericias -->
+        <h3>Pericias:</h3>
+        <button type="button" class="btn" id="btnAdicionarPericias">+ Pericia</button>
+        <div class="row">
+            <span class="col-3">Nome da pericia </span><span class="col-3"> Atributo Base</span><span class="col-2"> Pontos </span><span class="col-2"> Total </span>
+        </div>
+        <ul id="listaDePericias" class="classeListaDePericias">
+            
+        </ul>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
