Adicionar e remover pericias funcionando

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h3>Atributos</h3>
         <div class="row rowAtributos" id="atributosPrimarios"><!-- INICIO ATRIBUTOS PRIMARIOS -->
             <div class="col-2" id="atributoForca">
-                <h5 id="nomeDoAtributo">Força:<span id="valorTotalDoAtributo"></span></h5>
+                <span class="tituloDoAtributo" id="nomeDoAtributo">Força:</span><span id="valorTotalDoAtributo"></span>
                 <form>
                     <input type="number" name="" id="valorInvestido" >
                 </form>
@@ -32,7 +32,7 @@
                 </ul>                
             </div>
             <div class="col-2" id="atributoDestreza">
-                <h5 id="nomeDoAtributo">Destreza:<span id="valorTotalDoAtributo"></span></h5>
+                <span class="tituloDoAtributo" id="nomeDoAtributo">Destreza:</span><span id="valorTotalDoAtributo"></span>
                 <form>
                     <input type="number" name="" id="valorInvestido">
                 </form>
@@ -42,7 +42,7 @@
                 </ul>                
             </div>
             <div class="col-2" id="atributoVitalidade">
-                <h5 id="nomeDoAtributo">Vitalidade:<span id="valorTotalDoAtributo"></span></h5>
+                <span class="tituloDoAtributo" id="nomeDoAtributo">Vitalidade:</span><span id="valorTotalDoAtributo"></span>
                 <form>
                     <input type="number" name="" id="valorInvestido">
                 </form>
@@ -52,7 +52,7 @@
                 </ul>                
             </div>
             <div class="col-2" id="atributoInteligencia">
-                <h5 id="nomeDoAtributo">Inteligencia:<span id="valorTotalDoAtributo"></span></h5>
+                <span class="tituloDoAtributo" id="nomeDoAtributo">Inteligencia:</span><span id="valorTotalDoAtributo"></span>
                 <form>
                     <input type="number" name="" id="valorInvestido">
                 </form>
@@ -62,7 +62,7 @@
                 </ul>                
             </div>
             <div class="col-2" id="atributoCarisma">
-                <h5 id="nomeDoAtributo">Carisma:<span id="valorTotalDoAtributo"></span></h5>
+                <span class="tituloDoAtributo" id="nomeDoAtributo">Carisma:</span><span id="valorTotalDoAtributo"></span>
                 <form>
                     <input type="number" name="" id="valorInvestido">
                 </form>
@@ -72,7 +72,7 @@
                 </ul>                
             </div>
             <div class="col-2" id="atributoEsperteza">
-                <h5 id="nomeDoAtributo">Esperteza:<span id="valorTotalDoAtributo"></span></h5>
+                <span class="tituloDoAtributo" id="nomeDoAtributo">Esperteza:</span><span id="valorTotalDoAtributo"></span>
                 <form>
                     <input type="number" name="" id="valorInvestido">
                 </form>
@@ -85,7 +85,7 @@
 
         <div class="row rowAtributos" id="atributosSecundarios"><!-- INICIO ATRIBUTOS SECUNDARIOS -->
             <div class="col-2" id="atributoDano" data-media-base="atributoDestreza|atributoForca">
-                <h5 id="nomeDoAtributo">Dano:<span id="valorTotalDoAtributo"></span></h5>                
+                <span class="tituloDoAtributo" id="nomeDoAtributo">Dano:</span><span id="valorTotalDoAtributo"></span>
                 <span class="atributoBaseMedia">Destreza + Força: <span id="valorTotalDaMediaBaseAtributo"></span></span>
                 <form>
                     <input type="number" name="" id="valorInvestido" >
@@ -96,7 +96,7 @@
                 </ul>                
             </div>
             <div class="col-2" id="atributoIniciativa" data-media-base="atributoDestreza|atributoEsperteza">
-                <h5 id="nomeDoAtributo">Iniciativa:<span id="valorTotalDoAtributo"></span></h5>
+                <span class="tituloDoAtributo" id="nomeDoAtributo">Iniciativa:</span><span id="valorTotalDoAtributo"></span>
                 <span class="atributoBaseMedia">Destreza + Esperteza: <span id="valorTotalDaMediaBaseAtributo"></span></span>
                 <form>
                     <input type="number" name="" id="valorInvestido">
@@ -107,7 +107,7 @@
                 </ul>                
             </div>
             <div class="col-2" id="atributoPercepcao" data-media-base="atributoEsperteza|atributoInteligencia">
-                <h5 id="nomeDoAtributo">Percepção:<span id="valorTotalDoAtributo"></span></h5>
+                <span class="tituloDoAtributo" id="nomeDoAtributo">Percepção:</span><span id="valorTotalDoAtributo"></span>
                 <span class="atributoBaseMedia">Esperteza + Inteligencia: <span id="valorTotalDaMediaBaseAtributo"></span></span>
                 <form>
                     <input type="number" name="" id="valorInvestido">
@@ -118,7 +118,7 @@
                 </ul>                
             </div>
             <div class="col-2" id="atributoMana" data-media-base="atributoCarisma|atributoInteligencia">
-                <h5 id="nomeDoAtributo">Mana:<span id="valorTotalDoAtributo"></span></h5>
+                <span class="tituloDoAtributo" id="nomeDoAtributo">Mana:</span><span id="valorTotalDoAtributo"></span>
                 <span class="atributoBaseMedia">Carisma + Inteligencia: <span id="valorTotalDaMediaBaseAtributo"></span></span>
                 <form>
                     <input type="number" name="" id="valorInvestido">
@@ -129,7 +129,7 @@
                 </ul>                
             </div>
             <div class="col-2" id="atributoAparencia" data-media-base="atributoCarisma|atributoVitalidade">
-                <h5 id="nomeDoAtributo">Aparencia:<span id="valorTotalDoAtributo"></span></h5>
+                <span class="tituloDoAtributo" id="nomeDoAtributo">Aparencia:</span><span id="valorTotalDoAtributo"></span>
                 <span class="atributoBaseMedia">Carisma + Vitalidade: <span id="valorTotalDaMediaBaseAtributo"></span></span>
                 <form>
                     <input type="number" name="" id="valorInvestido">
@@ -140,7 +140,7 @@
                 </ul>                
             </div>
             <div class="col-2" id="atributoPontosDeVida" data-media-base="atributoForca|atributoVitalidade">
-                <h5 id="nomeDoAtributo">Pontos de Vida:<span id="valorTotalDoAtributo"></span></h5>
+                <span class="tituloDoAtributo" id="nomeDoAtributo">Pontos de Vida:</span><span id="valorTotalDoAtributo"></span>
                 <span class="atributoBaseMedia">Força + Vitalidade: <span id="valorTotalDaMediaBaseAtributo"></span></span>
                 <form>
                     <input type="number" name="" id="valorInvestido">
@@ -154,7 +154,7 @@
         
         <div class="row rowAtributos" id="atributosTerciarios"><!-- INICIO ATRIBUTOS TERCIARIOS -->
             <div class="col-2" id="atributoVelocidade" data-media-base="atributoDano|atributoForca|atributoPontosDeVida">
-                <h5 id="nomeDoAtributo">Velocidade:<span id="valorTotalDoAtributo"></span></h5>
+                <span class="tituloDoAtributo" id="nomeDoAtributo">Velocidade:</span><span id="valorTotalDoAtributo"></span>
                 <span class="atributoBaseMedia">Dano + Força + Pontos de Vida: <span id="valorTotalDaMediaBaseAtributo"></span></span>
                 <form>
                     <input type="number" name="" id="valorInvestido" >
@@ -165,7 +165,7 @@
                 </ul>                
             </div>
             <div class="col-2" id="atributoAtaque" data-media-base="atributoIniciativa|atributoDestreza|atributoDano">
-                <h5 id="nomeDoAtributo">Ataque:<span id="valorTotalDoAtributo"></span></h5>
+                <span class="tituloDoAtributo" id="nomeDoAtributo">Ataque:</span><span id="valorTotalDoAtributo"></span>
                 <span class="atributoBaseMedia">Iniciativa + Destreza + Dano: <span id="valorTotalDaMediaBaseAtributo"></span></span>
                 <form>
                     <input type="number" name="" id="valorInvestido">
@@ -176,7 +176,7 @@
                 </ul>                
             </div>
             <div class="col-2" id="atributoDefesa" data-media-base="atributoIniciativa|atributoEsperteza|atributoPercepcao">
-                <h5 id="nomeDoAtributo">Defesa:<span id="valorTotalDoAtributo"></span></h5>
+                <span class="tituloDoAtributo" id="nomeDoAtributo">Defesa:</span><span id="valorTotalDoAtributo"></span>
                 <span class="atributoBaseMedia">Iniciativa + Esperteza + Percepção: <span id="valorTotalDaMediaBaseAtributo"></span></span>
                 <form>
                     <input type="number" name="" id="valorInvestido">
@@ -187,7 +187,7 @@
                 </ul>                
             </div>
             <div class="col-2" id="atributoForcaDeVontade" data-media-base="atributoInteligencia|atributoPercepcao|atributoMana">
-                <h5 id="nomeDoAtributo">Força de Vontade:<span id="valorTotalDoAtributo"></span></h5>
+                <span class="tituloDoAtributo" id="nomeDoAtributo">Força de Vontade:</span><span id="valorTotalDoAtributo"></span>
                 <span class="atributoBaseMedia">Inteligencia + Percepção + Mana: <span id="valorTotalDaMediaBaseAtributo"></span></span>
                 <form>
                     <input type="number" name="" id="valorInvestido">
@@ -198,7 +198,7 @@
                 </ul>                
             </div>
             <div class="col-2" id="atributoEmpatia" data-media-base="atributoAparencia|atributoCarisma|atributoMana">
-                <h5 id="nomeDoAtributo">Empatia:<span id="valorTotalDoAtributo"></span></h5>
+                <span class="tituloDoAtributo" id="nomeDoAtributo">Empatia:</span><span id="valorTotalDoAtributo"></span>
                 <span class="atributoBaseMedia">Aparencia + Carisma + Mana: <span id="valorTotalDaMediaBaseAtributo"></span></span>
                 <form>
                     <input type="number" name="" id="valorInvestido">
@@ -209,7 +209,7 @@
                 </ul>                
             </div>
             <div class="col-2" id="atributoFadiga" data-media-base="atributoPontosDeVida|atributoVitalidade|atributoAparencia">
-                <h5 id="nomeDoAtributo">Fadiga:<span id="valorTotalDoAtributo"></span></h5>
+                <span class="tituloDoAtributo" id="nomeDoAtributo">Fadiga:</span><span id="valorTotalDoAtributo"></span>
                 <span class="atributoBaseMedia">Pontos de Vida + Vitalidade + Aparencia: <span id="valorTotalDaMediaBaseAtributo"></span></span>
                 <form>
                     <input type="number" name="" id="valorInvestido">
@@ -222,6 +222,7 @@
         </div><!-- FIM ATRIBUTOS TERCIARIOS -->
 
     </div><!-- FIM DE ATRIBUTOS -->
+    
     <div class="container" id="pericias"><!-- inicio de pericias -->
         <h3>Pericias:</h3>        
         <div class="row" id="containerListaDeSelecaoDePericias">
